--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,3 +9,7 @@
   -webkit-text-size-adjust: 100%;
   font-feature-settings: 'cv11', 'salt', 'ss01', 'ss03', 'cv01', 'cv02', 'cv03', 'cv04', 'cv05', 'cv06', 'cv09', 'cv10';
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
