feat: adicionando pageHome

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,3 +13,12 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+@keyframes degradeanimado{
+  0%{
+    background-position-x: 0%;
+  }
+  100%{
+    background-position-x: 100%;
+  }
+}
